testing policies/mutate/config_map/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-patch-cm
spec:
  rules:
    - name: pCM1
      match:
        resources:
          name: "config-game"
          kinds:
          - ConfigMap
      mutate:
        patchesJson6902: |-
          - path: "/data/bus.properties"
            op: add
            value: |
              type=starship
              owner=utany.corp
          - path: "/data/newKey2"
            op: add
            value: newValue1
